--- a/templates/newstore.html
+++ b/templates/newstore.html
@@ -32,9 +32,9 @@
 
 </head>
 <body><form id="newstore" action="enterstore" onsubmit="enterstore" method="GET" style="margin-top:50px; margin-left:50px;"><p><u>Enter details of the new store</u></p>
-<input type="text" id="newstoreinput" name="newstoreinput" placeholder="name of the new store" required></input>
-<br><input id="location" name="location" placeholder="location of the new store" required></input>
-<br><input id="description" name="description" placeholder="description including opening timings, phone number and location" required></input>
+<input type="text" id="newstoreinput" name="newstoreinput" placeholder="Name of the new store" required></input>
+<br><input id="location" name="location" placeholder="Location of the new store" required></input>
+<br><input id="description" name="description" placeholder="Description including opening timings, phone number and location" required></input>
 <br><input type="submit" style="padding:5px, 5px;margin-left:20px;" value="submit"></input>
 
 
